<resources>
    <string name="app_name">Code Butler</string>

    <string name="default_keyword">N/A</string>
    <string name="type_label">Type:\u0020</string>
    <string name="default_type">N/A</string>
    <string name="default_lessons">N/A</string>
    <string name="default_relevantCode">N/A</string>
    <string name="source_label">Source:\u0020</string>
    <string name="default_source">Course</string>

    <!--Global Strings-->
    <string name="type_label_hint">Choose a keyword type:</string>
    <string name="type_label_resource_xml">Resource xml</string>
    <string name="type_label_manifest_xml">Manifest xml</string>
    <string name="type_label_java">Java</string>
    <string name="type_label_gradle">Gradle</string>
    <string name="type_label_json">JSON</string>
    <string name="type_label_lesson">Lesson</string>
    <string name="NotAvailable">N/A</string>

    <!--Preferences menu courses options-->
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="add_button_text">ADD</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="user_values">My references</string>
    <string name="GDC_AD_course">Google Developer Challenge:\nAndroid Development</string>
    <string name="ND_AD_course">Udacity Nanodegree:\nAndroid Development</string>
    <string name="FIW_course">Udacity Firebase In A Weekend</string>
    <string name="forum">Forums (Udacity, StackOverflow, etc..)</string>
    <string name="pref_show_user_values">Show my references</string>
    <string name="pref_show_user_values_key" translatable="false">show_user_values</string>
    <string name="pref_show_GDC_AD_course">Show contents from Udacity Android Developer Challenge</string>
    <string name="pref_show_GDC_AD_course_key" translatable="false">show_GDC_AD_course</string>
    <string name="pref_show_ND_AD_course">Show contents from Udacity Android Developer Nanodegree</string>
    <string name="pref_show_ND_AD_course_key" translatable="false">show_ND_AD_course</string>
    <string name="pref_show_FIW_course">Show contents from Udacity Firebase in a Weekend</string>
    <string name="pref_show_FIW_course_key" translatable="false">show_FIW_course</string>
    <string name="pref_show_forum_threads">Show contents from forum threads</string>
    <string name="pref_show_forum_threads_key" translatable="false">show_forum_threads</string>
    <string name="Shown">Shown</string>
    <string name="Hidden">Hidden</string>

    <!--Preferences menu preferred result options-->
    <string name="pref_preferred_result_label">Preferred result type</string>
    <string name="pref_preferred_result_key">preferred_result</string>


    <string name="pref_preferred_result_value_resource_xml" translatable="false">resource xml</string>
    <string name="pref_preferred_result_value_manifest_xml" translatable="false">manifest xml</string>
    <string name="pref_preferred_result_value_java" translatable="false">java</string>
    <string name="pref_preferred_result_value_gradle" translatable="false">gradle</string>
    <string name="pref_preferred_result_value_json" translatable="false">json</string>
    <string name="pref_preferred_result_value_lesson" translatable="false">lesson</string>

    <!--MainActivity strings-->
    <string name="search_type">Search Type</string>
    <string name="results">Search Results</string>

    <!--Radio Buttons-->
    <string name="exact">Exact match</string>
    <string name="and_operator">All keywords</string>
    <string name="or_operator">Any keyword</string>

    <!--Database strings-->
    <string name="databaseVersionKey">databaseVersion</string>
    <string name="defaultDatabaseVersion">0</string>
    <string name="userIsTheSource">USER</string>
    <string name="courseIsTheSource">COURSE</string>
    <string name="forumIsTheSource">FORUM</string>

    <string name="courseCode_GDCAD">UD.GDC.AD</string>
    <string name="courseCode_NDAD">UD.ND.AD</string>
    <string name="courseCode_FIW">UD.FIW</string>
    <string name="udacity_thread">UD.UFT</string>
    <string name="stackoverflow_thread">SO</string>

    <string name="recyclerViewSourceExplanationGDCAD">Udacity Google Developer Challenge</string>
    <string name="recyclerViewSourceExplanationNDAD">Udacity Nanodegree - Android Dev.</string>
    <string name="recyclerViewSourceExplanationFIW">Udacity Firebase in a Weekend Course</string>
    <string name="recyclerViewSourceExplanationUSER">User-created</string>
    <string name="recyclerViewSourceExplanationFORUM">Various Forums</string>

    <string name="user_keywords">user_keywords</string>
    <string name="CodeButlerSharedPrefs">CodeButlerSharedPrefs</string>

    <!--NewEntryActivity Strings-->
    <string name="newEntry">Add New Entry</string>
    <string name="keyword_hint">Enter Keywords Here</string>

    <string name="lessonsGroupTitle">Lessons:</string>
    <string name="lessonsReference">Lesson Reference (e.g. UD.GDC.AD.2.4)</string>
    <string name="lessonsTitle">Lesson Name (e.g. A Brief Intro to Android Studio)</string>
    <string name="lessonsLink">Web Link (full address)</string>

    <string name="relevantCodeGroupTitle">Relevant Code:</string>
    <string name="relevantCodeReference">Code Reference (e.g. UD.GDC.AD.T01.01)</string>
    <string name="relevantCodeLink">Web Link (full address)</string>

    <!--SelectedItemActivity Strings-->
    <string name="Lesson">Lesson</string>
    <string name="RelevantCode">RelevantCode</string>
    <string name="Exercise">Exercise</string>
    <string name="LessonsLabel">Lessons:</string>
    <string name="RelevantCodeLabel">Relevant Code:</string>
    <string name="selectedItemDetails">Selected Item Details</string>
    <string name="noKeywords">(No keywords chosen)</string>
    <string name="userKeywords">User Keywords:\u0020</string>
    <string name="resultKeywords">Search Result Keywords:\u0020</string>
    <string name="resultType">Search Result Type:\u0020</string>
    <string name="resultSource">Search Result Source:\u0020</string>

    <!--AboutActivity Strings-->
    <string name="introduction">The CodeButler is was designed to help software development students find a quick reference to
        lessons and code snippets from courses they have experienced, by entering relevant keywords. In this way the student may spend
        less time searching for answers and more time implementing his/her ideas.\n\nThe app database currently includes material from
        the Udacity Android Developer Challenge Course and some forums. It will be expanded over time to include additional resources
        where available.\n\nSome resources, such as certain Udacity courses, may require course enrollment and login.\n\nThe user is encouraged
        to add his/her own entries to the database, for his/her own future reference.\n\nDatabase updates are provided with new versions
        of the app, so be sure to download the latest version!</string>
    <string name="legend">Note that references in the app use the following scheme:</string>

</resources>
