<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="@string/search"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:title="@string/add"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/about"/>
</menu>